added note about X-Frame-Options

--- a/Examples_w_iframes.html
+++ b/Examples_w_iframes.html
@@ -51,7 +51,9 @@
         </nav>
         <pre id="generated-code"><input placeholder="Enter a URL to display" id="iframe-url"><input type="button" id="change-iframe" value="Show &gt;">
 		<div id="resolution-wrapper">Resolution: <input id="resolution-width" style='width:3em;'> x <input id="resolution-height" readonly="readonly" style='width:3em;'> / <input id="pixel-ratio" readonly="readonly" style='width:3em;'><input type="button" id="change-resolution" value="Set &gt;"> Scale: <span class='scale'></span></div>
-		</pre>
+
+            <p>Note: Some websites won't allow being inserted into iframes by X-Frame-Option header.</p>
+        </pre>
         <div>
 
             <div class="device-container" style="max-width:300px;" data-size-port="300px" data-size-land="600px">
